--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  *, *::before, *::after {
+    @apply border-beige
+  }
+
+  html {
+    @apply text-black bg-white
+  }
+}
+
 .editor-shell {
   margin: 20px auto;
   border-radius: 2px;
