--- a/src/pages/admin/blog/Editor/ui/ContentEditable.module.css
+++ b/src/pages/admin/blog/Editor/ui/ContentEditable.module.css
@@ -8,11 +8,12 @@
  */
  .ContentEditable__root {
   border: 0;
-  font-size: 15px;
+  font-size: 18px;
+  line-height: 160%;
   display: block;
   position: relative;
   tab-size: 1;
   outline: 0;
-  padding: 10px;
+  padding: 16px;
   min-height: calc(100% - 20px);
 }
