--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -42,16 +42,11 @@
 }
 
 .editor-scroller {
-  min-height: 150px;
-  height: 360px;
-  border: 0;
+  min-height: 450px;
   resize: none;
   cursor: text;
   display: block;
   position: relative;
-  outline: 0;
-  overflow: auto;
-  resize: vertical;
 }
 
 .editor {
@@ -1191,9 +1186,12 @@ button.action-button:disabled {
 
 .toolbar {
   display: flex;
-  margin-bottom: 1px;
+  position: sticky;
+  top: 61px;
+  z-index: 9;
   background: #fff;
-  padding: 4px;
+  border-bottom: 1px solid lightgrey;
+  padding: 8px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   vertical-align: middle;
