--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,9 +14,9 @@
 
 .editor-shell {
   margin: 20px auto;
-  border-radius: 2px;
-  max-width: 1100px;
-  min-width: 1000px;
+  width: 100%;
+  max-width: 1000px;
+  min-width: 600px;
   color: #000;
   position: relative;
   line-height: 20px;
